k8s/services/jitsi/deployment-jicofo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  namespace: korczewski-jitsi
  labels:
    app: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-1
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-9364
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
