k8s/services/jitsi/deployment-prosody.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: korczewski-jitsi
  labels:
    app: prosody
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-1
      containers:
        - name: prosody
          image: jitsi/prosody:stable-9364
          imagePullPolicy: Always
          ports:
            - containerPort: 5222
            - containerPort: 5269
            - containerPort: 5280
            - containerPort: 5347
          readinessProbe:
            tcpSocket:
              port: 5222
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5222
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
